testing/tests/ui/as-primitive-type.stderr
error: the previous template error derives from
 --> tests/ui/as-primitive-type.rs:4:21
  |
4 | #[template(source = r#"{{ 1234 as 4567 }}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
 --> tests/ui/as-primitive-type.rs:8:21
  |
8 | #[template(source = r#"{{ 1234 as ? }}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/as-primitive-type.rs:12:21
   |
12 | #[template(source = r#"{{ 1234 as u1234 }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/as-primitive-type.rs:16:21
   |
16 | #[template(source = r#"{{ 1234 as core::primitive::u32 }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/as-primitive-type.rs:20:21
   |
20 | #[template(source = r#"{{ 1234 as int32_t }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/as-primitive-type.rs:24:21
   |
24 | #[template(source = r#"{{ (1234 + 4 * 12 / 45675445 - 13) as int32_t }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
